maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:14: error: method trouveDonut has return statement; needs result type
  return(i,j)
  ^