maze.shortestpath.ShortestPathMaze.scala.code
def trouveDonut() = {
  var i : Int = 0 
  var j : Int = 0 
  while (!aBiscuit(i,j)){
    if (i==getMondeLargeur()-1){
      i=0
      j=j+1
    }
  }
  val nbCase : Int = getMondeLargeur()*getMondeHauteur()
  var done : Int = 1
  setIndication(i,j,0)
  return(i,j)

}


override def run() {
    trouveDonut()
}